%% Sales Order Subsystem (Comprehensive)
erDiagram
  SALES_ORDER {
    string id
    string customerId
    string orderNumber
    string status
    float totalAmount
    string paymentMethod
    string deliveryMethod
    string deliveryStatus
    datetime createdAt
  }
  SALES_ORDER_MATERIAL {
    string id
    string salesOrderId
    string productId
    int quantity
    float unitPrice
  }
  SALES_INVOICE {
    string id
    string invoiceNumber
    string salesOrderId
    string customerId
    date invoiceDate
    date dueDate
    string status
    float totalAmount
  }
  PAYMENT {
    string id
    string relatedInvoiceId
    string relatedType
    float amount
    date paidAt
    string method
    string status
  }
  ORDER_HISTORY {
    string id
    string orderId
    string status
    string notes
    string changedBy
    datetime createdAt
  }

  SALES_ORDER ||--o{ SALES_ORDER_MATERIAL : "has"
  SALES_ORDER_MATERIAL }o--o{ PRODUCT : "references"
  SALES_ORDER ||--o{ SALES_INVOICE : "may generate"
  SALES_INVOICE ||--o{ PAYMENT : "is paid by"
  SALES_ORDER ||--o{ ORDER_HISTORY : "has"
